--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.4.0",
