--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "portfolio_poradnik",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
+    "serve": "^14.2.3",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
